--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,3 @@
 # These are supported funding model platforms
 
-github: [wadeshuler]
-custom: ["https://www.paypal.me/wadeshuler"]
+github: wadeshuler
